Fixed bug in testReadUser